# ros-example

./: README.md
.github/workflows/: catkin-build.yml
api_handler/: CMakeLists.txt  README.md  package.xml
api_handler/src/: handler.py
config/: rosconsole.conf
connect/: package.xml
connect/src/: server.py
db_handler/: CMakeLists.txt  README.md  package.xml  test.db
db_handler/include/db_handler/: db_handler.hpp
db_handler/launch/: run.launch
db_handler/src/: db_handler.cpp  db_handler_main.cpp
db_handler/test/: db.test  test_db.cpp
geo_manager/: CMakeLists.txt  README.md  package.xml  test.db
geo_manager/data/: cities.json
geo_manager/include/geo_manager/: Entity.hpp  city.hpp  entity.hpp  manager.hpp  region.hpp
geo_manager/launch/: Manager.launch
geo_manager/msg/: CityInfo.msg
geo_manager/src/: city.cpp  main.cpp  manager.cpp  region.cpp
geo_manager/srv/: AddCityToRegion.srv
geo_manager/test/: manager.test  test_city.cpp  test_manager.cpp
mypkg/: CMakeLists.txt  package.xml  test.db
mypkg/include/mypkg/: city.hpp  manager.hpp  region.hpp
mypkg/launch/: mypkg.launch  rosconsole.conf
mypkg/msg/: CityInfo.msg  RTCityReq.msg
mypkg/src/: manager.cpp
mypkg/srv/: AddCityToRegion.srv
rosconfig/: rosconsole.conf
shared_msgs/: CMakeLists.txt  REAME.md  package.xml
shared_msgs/srv/: AddCityToRegion.srv
show/: CMakeLists.txt  package.xml
show/src/: show.py
src/mypkg/: CMakeLists.txt  package.xml
src/mypkg/include/mypkg/: Entity.hpp  city.hpp  manager.hpp  region.hpp
src/mypkg/launch/: mypkg.launch
src/mypkg/src/: city.cpp  main.cpp  manager.cpp  region.cpp
src/mypkg/srv/: AddCityToRegion.srv
