<?xml version="1.0"?>
<package format="2">
  <name>mypkg</name>
  <version>0.0.1</version>
  <description>The mypkg package</description>

  <maintainer email="vignif@gmail.com">Francesco Vigni</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sqlite3</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>jsoncpp</build_depend>
  <build_depend>curlpp</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jsoncpp</exec_depend>
  <exec_depend>curlpp</exec_depend>


  <test_depend>gtest</test_depend>

</package>
