<?xml version="1.0"?>
<package format="2">
  <name>show</name>
  <version>0.0.1</version>
  <description>The show package</description>

  <maintainer email="vignif@gmail.com">Francesco Vigni</maintainer>



  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>db_handler</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shared_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>db_handler</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>shared_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>db_handler</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>shared_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
